--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           working_directory: ./sample
       - store_artifacts:
           key: build-{{ .Revision }}
-          path: ./samle/book.pdf
+          path: ./sample/book.pdf
           destination: book.pdf
 
   # gdriveを使ってPDF（が入っているディレクトリ）をデプロイするジョブ
