--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,17 +9,14 @@ jobs:
           name: Build PDF
           command: rake clean pdf
           working_directory: ~/sample
-      - store_artifacts:
-          path: ~/sample/book.pdf
-          destination: book.pdf
       - save_cache:
           key: build-{{ .Revision }}
           paths:
-            - ~/sample/book.pdf
+            - ~/sample/
   deploy:
     docker:
       - image: circleci/golang
-    working_directory: ~/sample
+    working_directory: ~/deploy
     steps:
       - run: go get github.com/prasmussen/gdrive
       # 成果物をリストア
@@ -29,8 +26,8 @@ jobs:
       - deploy:
           command: |
             echo $GOOGLE_SERVICE_ACCOUNT_CREDENTIAL > credential.json
-            filename="./sample/book-"$(date +%Y%m%d_%H%M%S)".pdf"
-            mv ./sample/book.pdf $filename
+            filename="~/sample/book-"$(date +%Y%m%d_%H%M%S)".pdf"
+            mv ~/sample/book.pdf $filename
             gdrive --config $(pwd) --service-account credential.json upload -p ${GOOGLE_DRIVE_FOLDER} $filename
 
 workflows:
