--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,14 +8,14 @@ jobs:
       - run:
           name: Build PDF
           command: rake clean pdf
-          working_directory: ~/sample
+          working_directory: ./sample
       - store_artifacts:
-          path: ~/sample/book.pdf
+          path: ./sample/book.pdf
           destination: book.pdf
       - save_cache:
           key: build-{{ .Revision }}
           paths:
-            - ~/sample
+            - ./sample
   deploy:
     docker:
       - image: circleci/golang
