--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,9 @@ jobs:
           name: Build PDF
           command: rake clean pdf
           working_directory: ./sample
-      - command: |
+      - run:
+          name: move book
+          - command: |
             mv ./sample/book.pdf build/
             chmod -R 777 build
       - store_artifacts:
