--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
       - save_cache:
           key: build-{{ .Revision }}
           paths:
-            - ./tmp
+            - /tmp
   deploy:
     docker:
       - image: circleci/golang
@@ -35,8 +35,9 @@ jobs:
       - deploy:
           command: |
             echo $GOOGLE_SERVICE_ACCOUNT_CREDENTIAL > credential.json
-            filename="./tmp/book-"$(date +%Y%m%d_%H%M%S)".pdf"
-            mv ./tmp/book.pdf $filename
+            ls /tmp
+            filename="/tmp/book-"$(date +%Y%m%d_%H%M%S)".pdf"
+            mv /tmp/book.pdf $filename
             gdrive --config $(pwd) --service-account credential.json upload -p ${GOOGLE_DRIVE_FOLDER} $filename
 
 workflows:
