--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,48 +2,17 @@ version: 2
 jobs:
   build:
     docker:
-      - image: vvakame/review:3.1
+        - image: vvakame/review:3.1
     steps:
       - checkout
       - run:
           name: Build PDF
           command: rake clean pdf
           working_directory: ./sample
-      - run:
-          name: move book
-          command: |
-            mkdir /build
-            mv ./sample/book.pdf /build
-            chmod -R 777 /build
       - store_artifacts:
-          path: /build/book.pdf
+          path: ./sample/book.pdf
           destination: book.pdf
-      - save_cache:
-          key: build-{{ .Revision }}
-          paths:
-            - /build
-  deploy:
-    docker:
-      - image: circleci/golang
-    working_directory: ~/build
-    steps:
-      - run: go get github.com/prasmussen/gdrive
-      # 成果物をリストア
-      - restore_cache:
-          keys:
-            - build-{{ .Revision }}
-      - deploy:
-          command: |
-            echo $GOOGLE_SERVICE_ACCOUNT_CREDENTIAL > credential.json
-            filename="./build/book-"$(date +%Y%m%d_%H%M%S)".pdf"
-            mv ./build/book.pdf $filename
-            gdrive --config $(pwd) --service-account credential.json upload -p ${GOOGLE_DRIVE_FOLDER} $filename
+      - run:
+          name: Upload to Dropbox
+          command: ./upload_dropbox.sh ./sample/book.pdf ${DROPBOX_TOKEN}
 
-workflows:
-  version: 2
-  build_and_deploy:
-    jobs:
-      - build
-      - deploy:
-          requires:
-            - build
